--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="content">
         <h2><img src="uu.png" alt="" width="200" height="200"></h2>
         <p>
-         Tu aplicacion ya está actualizada
+         Queremos llevar el cine a tu comodidad.
         </p>
       </div>
     </section>   
